--- a/templates/book_room.html
+++ b/templates/book_room.html
@@ -310,7 +310,7 @@
                 <div id="group">
                     <div class="content">
                         <i class="fa fa-user" aria-hidden="true"></i>
-                        <input type="text" class="input-group" placeholder="{{user.username}}" name="username" disabled>
+                        <input type="text" class="input-group" placeholder="{{name}}" name="username" disabled>
                     </div>
                     <div class="content">
                         <i class="fa fa-envelope-o" aria-hidden="true"></i>
