--- a/templates/admin/admin_index.html
+++ b/templates/admin/admin_index.html
@@ -178,6 +178,7 @@
         <div class="headings">
           <a href="{% url 'admin_index' %}" class="active">Home</a>
           <a href="{% url 'admin_requests' %}">Requests</a>
+          <a href="{% url 'availability' %}">Availability</a>
         </div>
           
           <div class="nav1-login">
@@ -206,6 +207,7 @@
           <ul>
               <li><a href="{% url 'admin_index' %}" class="active">Home</a></li>
               <li><a href="{% url 'admin_requests' %}">Requests</a></li>
+              <li><a href="{% url 'availability' %}">Availability</a></li>
               <li><div class="nav1-login">
                 {% if user.is_authenticated %}
                 <a href='{% url "logout" %}'>Logout</a>
