--- a/templates/admin/admin_login.html
+++ b/templates/admin/admin_login.html
@@ -431,6 +431,7 @@
         <div class="headings">
           <a href="{% url 'admin_index' %}">Home</a>
           <a href="{% url 'admin_requests' %}">Requests</a>
+          <a href="{% url 'availability' %}">Availability</a>
         </div>
           
           <div class="nav1-login">
@@ -457,8 +458,9 @@
     <div class="side-bar">
           <div id="close"><i class="fa-solid fa-xmark"></i></div>
           <ul>
-              <li><a href="{% url 'admin_index' %}" class="active">Home</a></li>
+              <li><a href="{% url 'admin_index' %}">Home</a></li>
               <a href="{% url 'admin_requests' %}">Requests</a>
+              <li><a href="{% url 'availability' %}">Availability</a></li>
               <li><div class="nav1-login">
                 {% if user.is_authenticated %}
                 <a href='{% url "logout" %}'>Logout</a>
