--- a/templates/admin/admin_requests.html
+++ b/templates/admin/admin_requests.html
@@ -148,6 +148,7 @@
         <div class="headings">
           <a href="{% url 'admin_index' %}">Home</a>
           <a href="{% url 'admin_requests' %}" class="active">Requests</a>
+          <a href="{% url 'availability' %}">Availability</a>
         </div>
           
           <div class="nav1-login">
@@ -176,6 +177,7 @@
           <ul>
               <li><a href="{% url 'admin_index' %}">Home</a></li>
               <li><a href="{% url 'admin_requests' %}" class="active">Requests</a></li>
+              <li><a href="{% url 'availability' %}">Availability</a></li>
               <li><div class="nav1-login">
                 {% if user.is_authenticated %}
                 <a href='{% url "logout" %}'>Logout</a>
