--- a/templates/admin/admin_index.html
+++ b/templates/admin/admin_index.html
@@ -122,6 +122,10 @@
         background-color: #e91e63;
       }
 
+      a.btn.delete:hover{
+        background-color: red;
+      }
+
       .headings{
         display: flex;
         justify-content: space-around;
